refactor: backend entity/service improvements, MapStruct enum mapping